--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,6 +3,14 @@
   width: 90%;
 }
 
+/* TO FIX - height should be 100% */
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .item {
   /* box-shadow: 2px 2px 4px 0 #ccc; */
   box-sizing: border-box;
