--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -25,7 +25,7 @@
 }
 
 .item img {
-  width: 100%;
+  /* width: 100%; */
 }
 
 .list {
@@ -34,6 +34,18 @@
   margin: 1.5em 0;
   padding: 0;
   width: 100%;
+}
+
+.masonry-with-columns {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.masonry-with-columns div {
+  height: 150px;
+  line-height: 150px;
+  color: white;
+  flex: 1 0 auto;
 }
 
 input {
